[gd_scene load_steps=8 format=3 uid="uid://qj3nsj80xvr5"]

[ext_resource type="Script" path="res://scripts/parallax_background.gd" id="1_g43s4"]
[ext_resource type="Texture2D" uid="uid://dfff1t5727a4p" path="res://assets/sprites/background_sky.png" id="2_w7jgw"]
[ext_resource type="Texture2D" uid="uid://0deulqyfdokq" path="res://assets/sprites/background_clouds.png" id="3_1j5da"]
[ext_resource type="Texture2D" uid="uid://1bc1vp7n2ddy" path="res://assets/sprites/background_greens.png" id="4_tbkfv"]
[ext_resource type="Texture2D" uid="uid://dwuxti35dkl8i" path="res://assets/sprites/background_trees.png" id="5_1qeiq"]
[ext_resource type="Texture2D" uid="uid://qy3g7wtx6ppv" path="res://assets/sprites/ground_sprite.png" id="6_hrgvm"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u8c6u"]

[node name="parallax_background" type="Node"]
script = ExtResource("1_g43s4")

[node name="ParallaxBackground1" type="ParallaxBackground" parent="."]

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2(0.01, 0.01)
motion_mirroring = Vector2(720, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground1/sky"]
texture_repeat = 2
position = Vector2(360, 0)
scale = Vector2(5, 5)
texture = ExtResource("2_w7jgw")
offset = Vector2(0, 127.5)
region_enabled = true
region_rect = Rect2(0, 0, 144, 255)

[node name="clouds" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(720, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground1/clouds"]
texture_repeat = 2
scale = Vector2(5, 5)
texture = ExtResource("3_1j5da")
offset = Vector2(72.5, 127.5)
region_enabled = true
region_rect = Rect2(0, 0, 144, 255)

[node name="greens" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(720, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground1/greens"]
texture_repeat = 2
scale = Vector2(5, 5)
texture = ExtResource("4_tbkfv")
offset = Vector2(72.5, 127.5)
region_enabled = true
region_rect = Rect2(0, 0, 144, 255)

[node name="trees" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2(0.75, 0.75)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground1/trees"]
texture_repeat = 2
position = Vector2(0, 560)
scale = Vector2(5, 5)
texture = ExtResource("5_1qeiq")
offset = Vector2(144, 64)
region_enabled = true
region_rect = Rect2(0, 0, 288, 128)

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 1

[node name="ground" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 10
motion_mirroring = Vector2(80, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ground"]
z_index = 1
texture_repeat = 2
position = Vector2(0, 1240)
scale = Vector2(5, 5)
texture = ExtResource("6_hrgvm")
centered = false
offset = Vector2(0, -8)
region_enabled = true
region_rect = Rect2(0, 0, 144, 16)

[node name="Area2D" type="Area2D" parent="ParallaxBackground2/ground"]
position = Vector2(0, 1200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground2/ground/Area2D"]
shape = SubResource("WorldBoundaryShape2D_u8c6u")

[connection signal="body_entered" from="ParallaxBackground2/ground/Area2D" to="." method="_on_ground_body_entered"]
